adjust path to js

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <script type="module">
-        import init from './out/nodal.js'; // Adjust the path if necessary
+        import init from './nodal.js'; 
         init().then(() => {
             console.log("WebAssembly loaded successfully");
         }).catch(e => console.error("Failed to load WebAssembly:", e));
